syntax = "proto3";
package trello.workspace_controller;

import "workspace.proto";
import "../auth.proto";
import "google/protobuf/empty.proto";

message WorkspaceObjectResponse {
    repeated trello.workspace.WorkspaceSchema owner=1;
    repeated trello.workspace.WorkspaceSchema admin=2;
    repeated trello.workspace.WorkspaceSchema member=3;
    repeated trello.workspace.WorkspaceSchema guest=4;
}

message WorkspaceListByEmailResponse{
    WorkspaceObjectResponse data=1;
}

message WorkspaceListResponse {
    repeated trello.workspace.WorkspaceSchema data=1;
}

message WorkspaceResponse {
    trello.workspace.WorkspaceSchema data=1;
}

message WorkspaceId{
    string workspace_id=1;
}

message UserAuthRequest{
    trello.auth.UserAuthSchema user=1;
}

message DeleteWorkspaceResponse {
    WorkspaceId data=1;
}

message WorkspaceByEmailRequest {
    string email=1;
}

message WorkspaceByIdRequest{
    string id=1;
}

message CreateWorkspace {
  string name=1;
  optional string description=2;
  optional string members=3;
}

message CreateWorkspaceRequest{
    UserAuthRequest user=1;
    CreateWorkspace body=2;
}

message UpdateWorkspace {
    string _id=1;
    optional string name=2;
    optional string short_name=3;
    optional string description=4;
    optional string logo=5;
    optional string website=6;
}

message UpdateWorkspaceRequest{
    UserAuthRequest user=1;
    UpdateWorkspace body=2;
}
  
message UpdateVisibility {
    string _id=1;
    string visibility=2;
}

message UpdateVisibilityRequest{
    UserAuthRequest user=1;
    UpdateVisibility body=2;
}

message InviteMember2Workspace{
    string status=1;
    string role=2;
    string email=3;
}

message InviteMember2WorkspaceRequest{
    UserAuthRequest user=1;
    InviteMember2Workspace body=2;
    string id=3;
}

service WorkspaceController {
    rpc getAll(trello.auth.UserAuthSchema) returns (WorkspaceListResponse);
    rpc getAllWorkspacesByEmail(trello.auth.UserAuthSchema) returns (WorkspaceListByEmailResponse);
    rpc getWorkspaceById(WorkspaceByIdRequest) returns (WorkspaceResponse);
    rpc getAdminWorkspacesByEmail(trello.auth.UserAuthSchema) returns (WorkspaceListResponse);
    rpc getGuestWorkspacesByEmail(trello.auth.UserAuthSchema) returns (WorkspaceListResponse);
    rpc getMemberWorkspacesByEmail(trello.auth.UserAuthSchema) returns (WorkspaceListResponse);
    rpc getOwnerWorkspacesByEmail(trello.auth.UserAuthSchema) returns (WorkspaceListResponse);
    rpc getPendingWorkspacesByEmail(trello.auth.UserAuthSchema) returns (WorkspaceListResponse);
    rpc createWorkspace(CreateWorkspaceRequest) returns (WorkspaceResponse);
    rpc updateWorkspaceInfo(UpdateWorkspaceRequest) returns (WorkspaceResponse);
    rpc changeWorkspaceVisibility(UpdateVisibilityRequest) returns (WorkspaceResponse);
    rpc deleteWorkspaceById(WorkspaceByIdRequest) returns (DeleteWorkspaceResponse);
    rpc inviteMembers2Workspace(InviteMember2WorkspaceRequest) returns (WorkspaceResponse);
}